--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^7.32.0"
+  },
   "devDependencies": {
     "@nrwl/cli": "12.9.0",
+    "@nrwl/cypress": "^12.9.0",
+    "@nrwl/react": "^12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
     "@types/node": "14.14.33",
+    "cypress": "^8.3.1",
     "prettier": "^2.3.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack": "^5.52.1"
   }
 }
