--- a/package.json
+++ b/package.json
@@ -5,17 +5,44 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "eslint": "^7.32.0"
+    "core-js": "^3.6.5",
+    "eslint": "^7.32.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
     "@nrwl/cli": "12.9.0",
     "@nrwl/cypress": "^12.9.0",
+    "@nrwl/eslint-plugin-nx": "12.9.0",
+    "@nrwl/jest": "12.9.0",
+    "@nrwl/linter": "12.9.0",
     "@nrwl/react": "^12.9.0",
     "@nrwl/tao": "12.9.0",
+    "@nrwl/web": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/react-hooks": "7.0.1",
+    "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "~4.28.3",
+    "@typescript-eslint/parser": "~4.28.3",
+    "babel-jest": "27.0.6",
     "cypress": "^8.3.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "ts-jest": "27.0.3",
     "typescript": "~4.3.5",
     "webpack": "^5.52.1"
   }
