--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "eslint": "^7.32.0",
     "react": "17.0.2",
@@ -45,5 +46,6 @@
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5",
     "webpack": "^5.52.1"
-  }
+  },
+  "workspaces": ["packages/*"]
 }
