--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -1,4 +1,11 @@
 {
   "name": "@edwardcoughlan/atoms",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "peerDependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1"
+  }   
 }
