--- a/package.json
+++ b/package.json
@@ -47,5 +47,7 @@
     "typescript": "~4.3.5",
     "webpack": "^5.52.1"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ]
 }
