--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@edwardcoughlan/atoms": ["packages/atoms/src/index.ts"]
+      "@edwardcoughlan/atoms": ["packages/atoms/src/index.ts"],
+      "@edwardcoughlan/molecules": ["packages/molecules/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
