--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "12.9.0",
     "@nrwl/cypress": "^12.9.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
     "@nrwl/jest": "12.9.0",
     "@nrwl/linter": "12.9.0",
     "@nrwl/react": "^12.9.0",
+    "@nrwl/storybook": "12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/web": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@storybook/addon-essentials": "~6.3.0",
+    "@storybook/react": "~6.3.0",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "7.0.1",
     "@types/jest": "26.0.24",
@@ -33,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "babel-jest": "27.0.6",
+    "babel-loader": "8.1.0",
     "cypress": "^8.3.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
@@ -45,6 +51,7 @@
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5",
+    "url-loader": "^3.0.0",
     "webpack": "^5.52.1"
   },
   "workspaces": [
