--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@@edwardcoughlan/ui-viewer": ["packages/ui-viewer/src/index.ts"],
       "@edwardcoughlan/atoms": ["packages/atoms/src/index.ts"],
       "@edwardcoughlan/molecules": ["packages/molecules/src/index.ts"]
     }
