--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,6 @@
 {
   "extends": "@nrwl/workspace/presets/npm.json",
-  "npmScope": "@edwardcoughlan",
+  "npmScope": "edwardcoughlan",
   "affected": {
     "defaultBase": "master"
   },
