--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nrwl/tao": "12.9.0",
     "@nrwl/web": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
     "@storybook/addon-essentials": "~6.3.0",
     "@storybook/react": "~6.3.0",
     "@svgr/webpack": "^5.4.0",
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "~4.28.3",
     "babel-jest": "27.0.6",
     "babel-loader": "8.1.0",
+    "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.3.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
@@ -48,11 +50,19 @@
     "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.0.3",
+    "mini-css-extract-plugin": "^2.1.0",
     "prettier": "^2.3.1",
+    "react-refresh": "^0.10.0",
+    "source-map-loader": "^3.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0",
-    "webpack": "^5.52.1"
+    "webpack": "^5.47.0",
+    "webpack-dev-server": "4.0.0-rc.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-sources": "^3.0.2"
   },
   "workspaces": [
     "packages/*"
