--- a/packages/molecules/.eslintrc.json
+++ b/packages/molecules/.eslintrc.json
@@ -17,7 +17,7 @@
       }
     },
     {
-      "files": ["*.spec.ts", "*.spec.tsx"],
+      "files": ["*.spec.ts", "*.spec.tsx", "*.stories.*"],
       "rules": {
         "import/no-extraneous-dependencies": "off"
       }
