--- a/packages/molecules/package.json
+++ b/packages/molecules/package.json
@@ -3,5 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "@edwardcoughlan/atoms": "*"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
