--- a/packages/atoms/package.json
+++ b/packages/atoms/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "peerDependencies": {
     "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "dependencies": {
+    "react-dom": "17.0.2",
     "classnames": "^2.3.1"
-  }   
+  }
 }
