--- a/packages/molecules/package.json
+++ b/packages/molecules/package.json
@@ -6,6 +6,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "classnames": "^2.3.1"
   }
 }
