--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "nx run-many --target=build --all --parallel",
     "lint": "nx run-many --target=lint --all --parallel",
-    "test": "nx run-many --target=test --all --parallel"
+    "test": "nx run-many --target=test --all --parallel",
+    "storybook": "nx run ui-viewer:storybook",
+    "storybook:build": "nx run ui-viewer:build-storybook:ci"
   },
   "private": true,
   "dependencies": {
