--- a/package.json
+++ b/package.json
@@ -11,64 +11,57 @@
   },
   "private": true,
   "dependencies": {
+    "@storybook/builder-webpack5": "~6.4.5",
+    "@storybook/core-server": "6.4.22",
+    "@storybook/manager-webpack5": "~6.4.5",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
-    "eslint": "^7.32.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "eslint": "8.12.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-is": "18.0.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/cypress": "^12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/linter": "12.9.0",
-    "@nrwl/react": "^12.9.0",
-    "@nrwl/storybook": "12.9.0",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/web": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
-    "@storybook/addon-essentials": "~6.3.0",
-    "@storybook/react": "~6.3.0",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/cypress": "14.1.9",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/react": "14.1.9",
+    "@nrwl/storybook": "14.1.9",
+    "@nrwl/web": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
+    "@storybook/addon-essentials": "6.4.22",
+    "@storybook/react": "6.4.22",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "11.2.6",
-    "@testing-library/react-hooks": "7.0.1",
-    "@types/jest": "26.0.24",
+    "@testing-library/react": "13.1.1",
+    "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
-    "babel-jest": "27.0.6",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
+    "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
-    "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.3.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "27.0.3",
-    "mini-css-extract-plugin": "^2.1.0",
-    "prettier": "^2.3.1",
-    "react-refresh": "^0.10.0",
-    "source-map-loader": "^3.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-jest": "27.0.3",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "jest": "27.5.1",
+    "nx": "14.1.9",
+    "prettier": "2.6.2",
+    "react-test-renderer": "18.0.0",
+    "ts-jest": "27.1.4",
     "typescript": "~4.3.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^5.47.0",
-    "webpack-dev-server": "4.0.0-rc.0",
-    "webpack-merge": "^5.8.0",
-    "webpack-node-externals": "^3.0.0",
-    "webpack-sources": "^3.0.2"
+    "url-loader": "^3.0.0"
   },
   "workspaces": [
     "packages/*"
