--- a/packages/molecules/.eslintrc.json
+++ b/packages/molecules/.eslintrc.json
@@ -13,7 +13,8 @@
         "project": ["packages/molecules/tsconfig.*?.json"]
       },
       "rules": {
-        "react/react-in-jsx-scope" : "off"
+        "react/react-in-jsx-scope" : "off",
+        "react/require-default-props": "off"
       }
     },
     {
