--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "private": true,
   "dependencies": {
-    "@storybook/builder-webpack5": "~6.4.5",
-    "@storybook/core-server": "6.4.22",
-    "@storybook/manager-webpack5": "~6.4.5",
+    "@storybook/builder-webpack5": "~6.5.6",
+    "@storybook/core-server": "6.5.6",
+    "@storybook/manager-webpack5": "~6.5.6",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "eslint": "8.12.0",
@@ -35,8 +35,8 @@
     "@nrwl/storybook": "14.1.9",
     "@nrwl/web": "14.1.9",
     "@nrwl/workspace": "14.1.9",
-    "@storybook/addon-essentials": "6.4.22",
-    "@storybook/react": "6.4.22",
+    "@storybook/addon-essentials": "6.5.6",
+    "@storybook/react": "6.5.6",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
@@ -55,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "jest": "27.5.1",
     "nx": "14.1.9",
     "prettier": "2.6.2",
