add gitlens to vscode recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "esbenp.prettier-vscode",
     "firsttris.vscode-jest-runner",
     "dbaeumer.vscode-eslint",
-    "alexandernanberg.horizon-theme-vscode"
+    "alexandernanberg.horizon-theme-vscode",
+    "eamodio.gitlens"
   ]
 }
