--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "nx run-many --target=lint --all --parallel",
     "test": "nx run-many --target=test --all --parallel",
     "storybook": "nx run ui-viewer:storybook",
-    "storybook:build": "nx run ui-viewer:build-storybook:ci"
+    "storybook:build": "nx run ui-viewer:build-storybook:ci",
+    "publish:libs": "node ./tools/publish.mjs" 
   },
   "private": true,
   "dependencies": {
