--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "nx run-many --target=test --all --parallel",
     "storybook": "nx run ui-viewer:storybook",
     "storybook:build": "nx run ui-viewer:build-storybook:ci",
-    "publish:libs": "node ./tools/publish.mjs" 
+    "prebuildCI:libs": "node ./tools/prebuild.mjs", 
+    "publish:libs": "node ./tools/publish.mjs"
   },
   "private": true,
   "dependencies": {
@@ -61,6 +62,7 @@
     "nx": "14.1.9",
     "prettier": "2.6.2",
     "react-test-renderer": "18.0.0",
+    "semver": "^7.3.7",
     "ts-jest": "27.1.4",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0"
