--- a/packages/components/.eslintrc.json
+++ b/packages/components/.eslintrc.json
@@ -14,7 +14,8 @@
       },
       "rules": {
         "react/react-in-jsx-scope": "off",
-        "react/require-default-props": "off"
+        "react/require-default-props": "off",
+        "import/prefer-default-export": "off"
       }
     },
     {
