--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@edwardcoughlan/components",
   "version": "0.0.0",
+  "style": "index.css",
   "peerDependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
