--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@edwardcoughlan/tokens",
   "version": "0.0.0",
+  "style": "index.css",
   "peerDependencies": {
     "react": "18.1.0",
     "react-dom": "18.1.0",
