--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -6,5 +6,10 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "classnames": "^2.3.1"
-  }
+  },
+  "exports":{
+    "./index.css": {
+      "import" : "./index.css"
+    }
+  } 
 }
