--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,8 @@
   },
   "exports":{
     "./index.css": {
-      "import" : "./index.css"
+      "import" : "./index.css",
+      "require": "./index.css"
     }
   } 
 }
