--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,6 +2,13 @@
   "name": "@edwardcoughlan/components",
   "version": "0.0.0",
   "style": "index.css",
+  "license": "MIT",
+  "private": false,
+  "repository": {
+    "url": "https://github.com/EdwardCoughlan/ed-react-component-library.git",
+    "directory": "packages/components",
+    "type": "git"
+  },
   "peerDependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
