--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint": "8.12.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-is": "18.0.0",
+    "react-is": "18.1.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
@@ -50,13 +50,13 @@
     "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
     "cypress": "^8.3.1",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.5.12",
     "jest": "27.5.1",
     "nx": "14.1.9",
