--- a/packages/components/project.json
+++ b/packages/components/project.json
@@ -20,7 +20,8 @@
             "input": ".",
             "output": "."
           }
-        ]
+        ],
+        "buildableProjectDepsInPackageJsonType": "dependencies"
       }
     },
     "lint": {
