--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "semver": "^7.3.7",
     "ts-jest": "27.1.4",
     "typescript": "~4.3.5",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "webpack": "^5.74.0"
   },
   "workspaces": [
     "packages/*"
