--- a/package.json
+++ b/package.json
@@ -13,58 +13,58 @@
   },
   "private": true,
   "dependencies": {
-    "@storybook/builder-webpack5": "~6.5.6",
-    "@storybook/core-server": "6.5.6",
-    "@storybook/manager-webpack5": "~6.5.6",
+    "@storybook/builder-webpack5": "6.5.12",
+    "@storybook/core-server": "6.5.12",
+    "@storybook/manager-webpack5": "6.5.12",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
-    "eslint": "8.12.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-is": "18.1.0",
+    "eslint": "8.15.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/react": "14.1.9",
-    "@nrwl/storybook": "14.1.9",
-    "@nrwl/web": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
-    "@storybook/addon-essentials": "6.5.6",
-    "@storybook/react": "6.5.6",
+    "@nrwl/cli": "15.0.0",
+    "@nrwl/cypress": "15.0.0",
+    "@nrwl/eslint-plugin-nx": "15.0.0",
+    "@nrwl/jest": "15.0.0",
+    "@nrwl/linter": "15.0.0",
+    "@nrwl/react": "15.0.0",
+    "@nrwl/storybook": "15.0.0",
+    "@nrwl/web": "15.0.0",
+    "@nrwl/workspace": "15.0.0",
+    "@storybook/addon-essentials": "6.5.12",
+    "@storybook/react": "6.5.12",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "13.1.1",
-    "@types/jest": "27.4.1",
-    "@types/node": "14.14.33",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "babel-jest": "27.5.1",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.40.1",
+    "@typescript-eslint/parser": "5.40.1",
+    "babel-jest": "28.1.3",
     "babel-loader": "8.1.0",
     "cypress": "^8.3.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "^0.5.12",
-    "jest": "27.5.1",
-    "nx": "14.1.9",
-    "prettier": "2.6.2",
-    "react-test-renderer": "18.0.0",
+    "jest": "28.1.3",
+    "nx": "15.0.0",
+    "prettier": "2.7.1",
+    "react-test-renderer": "18.2.0",
     "semver": "^7.3.7",
-    "ts-jest": "27.1.4",
-    "typescript": "~4.3.5",
+    "ts-jest": "28.0.8",
+    "typescript": "4.8.4",
     "url-loader": "^3.0.0",
     "webpack": "^5.74.0"
   },
@@ -72,3 +72,4 @@
     "packages/*"
   ]
 }
+
