--- a/packages/components/.eslintrc.json
+++ b/packages/components/.eslintrc.json
@@ -15,7 +15,8 @@
       "rules": {
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "react/function-component-definition": "off"
       }
     },
     {
