--- a/packages/components/project.json
+++ b/packages/components/project.json
@@ -3,6 +3,7 @@
   "sourceRoot": "packages/components/src",
   "projectType": "library",
   "tags": [],
+  "implicitDependencies": ["tokens"],
   "targets": {
     "build": {
       "executor": "@nrwl/rollup:rollup",
