--- a/nx.json
+++ b/nx.json
@@ -4,7 +4,9 @@
   "affected": {
     "defaultBase": "main"
   },
-  "workspaceLayout": {"libsDir": "packages"},
+  "workspaceLayout": {
+    "libsDir": "packages"
+  },
   "tasksRunnerOptions": {
     "default": {
       "runner": "nx/tasks-runners/default",
