--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "^0.5.12",
     "jest": "28.1.3",
+    "jest-environment-jsdom": "^29.2.1",
     "nx": "15.0.0",
     "prettier": "2.7.1",
     "react-test-renderer": "18.2.0",
@@ -72,4 +73,3 @@
     "packages/*"
   ]
 }
-
