--- a/package.json
+++ b/package.json
@@ -71,5 +71,9 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0"
+  }
 }
