--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,8 +12,7 @@
   "peerDependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "classnames": "^2.3.1",
-    "@edwardcoughlan/tokens": "*"
+    "classnames": "^2.3.1"
   },
   "exports":{
     "./index.css": {
