--- a/packages/tokens/project.json
+++ b/packages/tokens/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "tokens",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/tokens/src",
   "projectType": "library",
