--- a/packages/ui-viewer/project.json
+++ b/packages/ui-viewer/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "ui-viewer",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/ui-viewer/src",
   "projectType": "library",
